--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -1,10 +1,10 @@
 {
   "description":{
-    "message":"L'extensió més popular de Chrome, amb més de 40 milions d'usuaris! Bloqueja els anuncis de tota la xarxa.",
+    "message":"L'extensió més popular de Chrome, amb més de 60 milions d'usuaris! Bloqueja els anuncis de tota la xarxa.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
   },
   "description2":{
-    "message":"L'extensió més popular de Chrome, amb més de 40 milions d'usuaris! Bloqueja els anuncis de tota la xarxa.",
+    "message":"L'extensió més popular de Chrome, amb més de 60 milions d'usuaris! Bloqueja els anuncis de tota la xarxa.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
   },
   "description_edge":{
@@ -479,6 +479,10 @@
     "message":"Turc",
     "description":"A filter list"
   },
+  "filteranticircumvent":{
+    "message":"Filtres anti-elusió",
+    "description":"A filter list"
+  },
   "blacklistclickmessage":{
     "message":"Feu clic dret a un anunci en una pàgina per bloquejar-lo –– o bé bloquejeu-lo aquí manualment.",
     "description":"'Hide a section of a webpage' part on the Customize tab of the Options page."
@@ -946,6 +950,10 @@
   "filterjapanese":{
     "message":"Japonès",
     "description":"A filter list"
+  },
+  "filternorwegian":{
+    "message":"Noruec",
+    "description":"A filter lsit"
   },
   "filtereasylist_plun_korean":{
     "message":"Coreà",
@@ -1545,10 +1553,6 @@
       }
     }
   },
-  "here":{
-    "message":"aquí",
-    "description":"This message is injected in other strings as a link\/button"
-  },
   "adblocksupport":{
     "message":"Suport d'AdBlock",
     "description":"Title of the Support tab of the Options page"
@@ -1590,7 +1594,7 @@
     "description":"Link to the contributors page on the Support tab"
   },
   "debuginfo":{
-    "message":"El nostre equip us ha sol·licitat informació de depuració? Cliqueu [[aquí]] per enviar-la!",
+    "message":"El nostre equip us ha sol·licitat informació de depuració? Cliqueu [[here]] per enviar-la!",
     "description":"Users can click this link to provide debug information to AdBlock staff"
   },
   "bugreport":{
@@ -1880,5 +1884,29 @@
   "landscapechannelswitchlabel":{
     "message":"Paisatges",
     "description":"The label text for the Landscape switch on the MyAdBlock Options page"
+  },
+  "urgent_safari_changes":{
+    "message":"URGENT: Apple està canviant les extensions de Safari.",
+    "description":"Title for Options page message letting users know of settings change."
+  },
+  "settings_changed":{
+    "message":"En preparació, l'AdBlock ara funciona de manera diferent i algunes de les configuracions poden haver canviat.",
+    "description":"Part of Options page message letting users know of settings change."
+  },
+  "learn_more":{
+    "message":"Aprèn més.",
+    "description":"Link to Knowledge Base article with more information about the settings change"
+  },
+  "download_mac_app":{
+    "message":"Per obtenir la millor experiència d'AdBlock al vostre Mac, baixeu l'[[AdBlock per a l'aplicació de Safari Mac!]]",
+    "description":"Link to download our Mac App. [[ and ]] will be replaced with HTML to link to the Mac App Store"
+  },
+  "note":{
+    "message":"NOTA:",
+    "description":"Indicates that the user should take note of the message that follows."
+  },
+  "changes_to_adblock":{
+    "message":"Hem fet canvis a l'AdBlock!",
+    "description":"Link to Options page with more information about the changes."
   }
 }
