--- a/_locales/cs/messages.json
+++ b/_locales/cs/messages.json
@@ -1,12 +1,4 @@
 {
-  "description":{
-    "message":"Nejpopulárnější rozšíření pro Chrome s více než 40 miliony uživateli! Blokujeme reklamy na celém webu.",
-    "description":"Extension description in manifest. Should not exceed 132 characters."
-  },
-  "description2":{
-    "message":"Nejpopulárnější rozšíření pro Chrome s více než 40 miliony uživateli! Blokujeme reklamy na celém webu.",
-    "description":"Extension description in manifest. Should not exceed 132 characters."
-  },
   "name_adblock_on_youtube":{
     "message":"AdBlock na YouTube™",
     "description":"Name of version of the AdBlock extension that only blocks ads on YouTube. Other strings that refer to the 'AdBlock on YouTube' extension should use this name."
@@ -867,6 +859,10 @@
     "message":"Japonština",
     "description":"A filter list"
   },
+  "filternorwegian":{
+    "message":"Norština",
+    "description":"A filter lsit"
+  },
   "filtereasylist_plun_korean":{
     "message":"Korejština",
     "description":"A filter list"
@@ -1425,10 +1421,6 @@
       }
     }
   },
-  "here":{
-    "message":"zde",
-    "description":"This message is injected in other strings as a link\/button"
-  },
   "adblocksupport":{
     "message":"Podpora AdBlock",
     "description":"Title of the Support tab of the Options page"
@@ -1468,10 +1460,6 @@
   "contributors":{
     "message":"Máme stránku, která vám pomůže zjistit [[kdo stojí za AdBlockem!]]",
     "description":"Link to the contributors page on the Support tab"
-  },
-  "debuginfo":{
-    "message":"Požádal náš tým o nějaké ladící informace? Klikněte [[zde]]!",
-    "description":"Users can click this link to provide debug information to AdBlock staff"
   },
   "bugreport":{
     "message":"Proč nám nepošlete [[hlášení o chybě]]?",
@@ -1584,10 +1572,6 @@
   "acceptableadsdisable_done":{
     "message":"Jste již přihlášen do seznamu přijatelných reklam.",
     "description":"Message shown to users after disabling Acceptable Ads via the Options page."
-  },
-  "easylist_lite_disable_done":{
-    "message":"AdBlock využívá EasyList Lite nebo EasyList pro zablokování reklam na většině reklam.",
-    "description":"Message shown to users after disabling both EasyList Lite and EasyList via the Filter lists tab on the Options page."
   },
   "adreport_laststep":{
     "message":"Poslední krok: nahlaste nám tento problém.",
@@ -1712,5 +1696,21 @@
   "landscapechannelswitchlabel":{
     "message":"Krajiny",
     "description":"The label text for the Landscape switch on the MyAdBlock Options page"
+  },
+  "urgent_safari_changes":{
+    "message":"AKUTNÍ: Apple mění rozšíření pro Safari.",
+    "description":"Title for Options page message letting users know of settings change."
+  },
+  "learn_more":{
+    "message":"Zjistěte více.",
+    "description":"Link to Knowledge Base article with more information about the settings change"
+  },
+  "note":{
+    "message":"POZNÁMKA:",
+    "description":"Indicates that the user should take note of the message that follows."
+  },
+  "changes_to_adblock":{
+    "message":"V AdBlocku jsme provedli změny!",
+    "description":"Link to Options page with more information about the changes."
   }
 }
