--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -479,6 +479,10 @@
     "message": "Türkisch",
     "description": "A filter list"
   },
+  "filteranticircumvent": {
+    "message": "Anti-Umgehungsfilter",
+    "description": "A filter list"
+  },
   "blacklistclickmessage": {
     "message": "Rechtsklick auf eine Werbung auf einer Seite, um sie zu blockieren – oder hier manuell blockieren.",
     "description": "'Hide a section of a webpage' part on the Customize tab of the Options page."
@@ -947,6 +951,10 @@
     "message": "Japanisch",
     "description": "A filter list"
   },
+  "filternorwegian": {
+    "message": "Norwegisch",
+    "description": "A filter lsit"
+  },
   "filtereasylist_plun_korean": {
     "message": "Koreanisch",
     "description": "A filter list"
@@ -1341,6 +1349,10 @@
   },
   "report_ad_on_page": {
     "message": "Melden Sie eine Werbung auf dieser Seite",
+    "description": "Entry in the AdBlock button menu"
+  },
+  "troubleshoot_an_ad": {
+    "message": "Fehlerbehebung bei einer Anzeige",
     "description": "Entry in the AdBlock button menu"
   },
   "acceptableadsoption": {
