--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -479,6 +479,10 @@
     "message": "Turco",
     "description": "A filter list"
   },
+  "filteranticircumvent": {
+    "message": "Filtros antielusión",
+    "description": "A filter list"
+  },
   "blacklistclickmessage": {
     "message": "Haz clic derecho en un anuncio de una página para bloquearlo, o bloquéalo manualmente aquí.",
     "description": "'Hide a section of a webpage' part on the Customize tab of the Options page."
@@ -947,6 +951,10 @@
     "message": "Japonés",
     "description": "A filter list"
   },
+  "filternorwegian": {
+    "message": "Noruego",
+    "description": "A filter lsit"
+  },
   "filtereasylist_plun_korean": {
     "message": "Coreano",
     "description": "A filter list"
@@ -1341,6 +1349,10 @@
   },
   "report_ad_on_page": {
     "message": "Informar de un anuncio en esta página",
+    "description": "Entry in the AdBlock button menu"
+  },
+  "troubleshoot_an_ad": {
+    "message": "Solucionar problemas con un anuncio",
     "description": "Entry in the AdBlock button menu"
   },
   "acceptableadsoption": {
