--- a/_locales/gl/messages.json
+++ b/_locales/gl/messages.json
@@ -1,12 +1,4 @@
 {
-  "description":{
-    "message":"A extensión máis popular de Chrome con máis de 40 millóns de usuarios. Bloquea anuncios por toda a rede.",
-    "description":"Extension description in manifest. Should not exceed 132 characters."
-  },
-  "description2":{
-    "message":"A extensión máis popular de Chrome con máis de 40 millóns de usuarios. Bloquea anuncios por toda a rede.",
-    "description":"Extension description in manifest. Should not exceed 132 characters."
-  },
   "description_edge":{
     "message":"AdBlock. O bloqueador n. º 1 con máis de 200 millóns de descargas. Bloquea anuncios por toda a rede.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -943,6 +935,10 @@
     "message":"Xaponés",
     "description":"A filter list"
   },
+  "filternorwegian":{
+    "message":"Noruego",
+    "description":"A filter lsit"
+  },
   "filtereasylist_plun_korean":{
     "message":"Coreano",
     "description":"A filter list"
@@ -1525,10 +1521,6 @@
       }
     }
   },
-  "here":{
-    "message":"aquí",
-    "description":"This message is injected in other strings as a link\/button"
-  },
   "adblocksupport":{
     "message":"Soporte de AdBlock",
     "description":"Title of the Support tab of the Options page"
@@ -1568,10 +1560,6 @@
   "contributors":{
     "message":"Tamén temos unha páxina en que podes ver as [[persoas que fan posible AdBlock]]!",
     "description":"Link to the contributors page on the Support tab"
-  },
-  "debuginfo":{
-    "message":"O noso equipo solicitouche algunha información de depuración. Preme [[aquí]] para enviala!",
-    "description":"Users can click this link to provide debug information to AdBlock staff"
   },
   "bugreport":{
     "message":"Por que non nos envías un [[informe de erros]]?",
