--- a/_locales/he/messages.json
+++ b/_locales/he/messages.json
@@ -1,10 +1,10 @@
 {
   "description":{
-    "message":"הרחבת Chrome הפופולרית ביותר, עם יותר מ־40 מיליון משתמשים! חוסמת פרסומות בכל רחבי הרשת.",
+    "message":"הרחבת Chrome הפופולרית ביותר, עם יותר מ־60 מיליון משתמשים! חוסמת פרסומות בכל רחבי הרשת.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
   },
   "description2":{
-    "message":"הרחבת Chrome הפופולרית ביותר, עם יותר מ־40 מיליון משתמשים! חוסמת פרסומות בכל רחבי הרשת.",
+    "message":"הרחבת Chrome הפופולרית ביותר, עם יותר מ־60 מיליון משתמשים! חוסמת פרסומות בכל רחבי הרשת.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
   },
   "description_edge":{
@@ -44,7 +44,7 @@
     "description":"Edit filter(s) manually button"
   },
   "optionstitle":{
-    "message":"אפשריות AdBlock",
+    "message":"אפשרויות AdBlock",
     "description":"Title for the Options page"
   },
   "optionstitle_yt":{
@@ -477,6 +477,10 @@
   },
   "filterturkish":{
     "message":"טורקית",
+    "description":"A filter list"
+  },
+  "filteranticircumvent":{
+    "message":"מסנני נגד־עקיפה",
     "description":"A filter list"
   },
   "blacklistclickmessage":{
@@ -946,6 +950,10 @@
   "filterjapanese":{
     "message":"יפנית",
     "description":"A filter list"
+  },
+  "filternorwegian":{
+    "message":"נורבגית",
+    "description":"A filter lsit"
   },
   "filtereasylist_plun_korean":{
     "message":"קוריאנית",
@@ -1545,10 +1553,6 @@
       }
     }
   },
-  "here":{
-    "message":"כאן",
-    "description":"This message is injected in other strings as a link\/button"
-  },
   "adblocksupport":{
     "message":"תמיכת AdBlock",
     "description":"Title of the Support tab of the Options page"
@@ -1586,7 +1590,7 @@
     "description":"Link to the source code of AdBlock on the Support tab"
   },
   "contributors":{
-    "message":"יש לנו עמוד כדי לעזור לך לגלות את [[האנשים מאוחרי AdBlock]], גם כן!",
+    "message":"יש לנו עמוד כדי לעזור לך לגלות את [[האנשים מאחורי AdBlock]], גם כן!",
     "description":"Link to the contributors page on the Support tab"
   },
   "debuginfo":{
@@ -1880,5 +1884,29 @@
   "landscapechannelswitchlabel":{
     "message":"נופים",
     "description":"The label text for the Landscape switch on the MyAdBlock Options page"
+  },
+  "urgent_safari_changes":{
+    "message":"דחוף: Apple משנה את הרחבות Safari.",
+    "description":"Title for Options page message letting users know of settings change."
+  },
+  "settings_changed":{
+    "message":"כהכנה, AdBlock עובד כעת בצורה שונה וחלק מההגדרות שלך כנראה השתנה.",
+    "description":"Part of Options page message letting users know of settings change."
+  },
+  "learn_more":{
+    "message":"למד עוד.",
+    "description":"Link to Knowledge Base article with more information about the settings change"
+  },
+  "download_mac_app":{
+    "message":"כדי לקבל את חווית AdBlock הטובה ביותר על Mac, אנא הורד את [[יישום Mac של AdBlock עבור Safari]] שלנו!",
+    "description":"Link to download our Mac App. [[ and ]] will be replaced with HTML to link to the Mac App Store"
+  },
+  "note":{
+    "message":"הערה:",
+    "description":"Indicates that the user should take note of the message that follows."
+  },
+  "changes_to_adblock":{
+    "message":"עשינו שינויים אל AdBlock!",
+    "description":"Link to Options page with more information about the changes."
   }
 }
