--- a/_locales/hr/messages.json
+++ b/_locales/hr/messages.json
@@ -1,12 +1,4 @@
 {
-  "description":{
-    "message":"Najpopularnije Chrome proširenje, sa preko 40 milijuna korisnika! Blokira oglase na cijelom internetu.",
-    "description":"Extension description in manifest. Should not exceed 132 characters."
-  },
-  "description2":{
-    "message":"Najpopularnije Chrome proširenje, sa preko 40 milijuna korisnika! Blokira reklame na cijelom internetu.",
-    "description":"Extension description in manifest. Should not exceed 132 characters."
-  },
   "description_edge":{
     "message":"AdBlock. #1 bloker oglasa s više od 200 milijuna preuzimanja. Blokira oglase na cijelom webu.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -250,6 +242,10 @@
   "generaloptions":{
     "message":"Opće postavke",
     "description":"Title of the first Options page tab"
+  },
+  "mac_app_message_options":{
+    "message":"AdBlock za Safari je sada dostupan kao Mac aplikacija!",
+    "description":"Message to users on the Options page"
   },
   "betalabel":{
     "message":"Beta",
@@ -1425,10 +1421,6 @@
       }
     }
   },
-  "here":{
-    "message":"ovdje",
-    "description":"This message is injected in other strings as a link\/button"
-  },
   "adblocksupport":{
     "message":"AdBlock podrška",
     "description":"Title of the Support tab of the Options page"
@@ -1468,10 +1460,6 @@
   "contributors":{
     "message":"Također, imamo i stranicu na kojoj možete pronaći [[ljude koji su napravili AdBlock]]!",
     "description":"Link to the contributors page on the Support tab"
-  },
-  "debuginfo":{
-    "message":"Da li je naš tim zatražio informacije o grešci? Kliknite [[ovdje]] za to!",
-    "description":"Users can click this link to provide debug information to AdBlock staff"
   },
   "bugreport":{
     "message":"Zašto nam ne pošaljete [[izvještaj greške]]?",
