--- a/_locales/hu/messages.json
+++ b/_locales/hu/messages.json
@@ -1,12 +1,4 @@
 {
-  "description":{
-    "message":"A legnépszerűbb Chrome kiegészítő, több mint 40 millió felhasználóval! Reklámokat blokkol szerte a weben.",
-    "description":"Extension description in manifest. Should not exceed 132 characters."
-  },
-  "description2":{
-    "message":"A legnépszerűbb Chrome kiegészítő, több mint 40 millió felhasználóval! Reklámokat blokkol szerte a weben.",
-    "description":"Extension description in manifest. Should not exceed 132 characters."
-  },
   "description_edge":{
     "message":"AdBlock. Az elsőszámú hirdetés blokkoló, több mint 200 millió letöltéssel. Blokkolja a hirdetéseket szerte a hálón.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -943,6 +935,10 @@
     "message":"Japán",
     "description":"A filter list"
   },
+  "filternorwegian":{
+    "message":"Norvég",
+    "description":"A filter lsit"
+  },
   "filtereasylist_plun_korean":{
     "message":"Koreai",
     "description":"A filter list"
@@ -1533,10 +1529,6 @@
       }
     }
   },
-  "here":{
-    "message":"ide",
-    "description":"This message is injected in other strings as a link\/button"
-  },
   "adblocksupport":{
     "message":"AdBlock ügyfélszolgálat",
     "description":"Title of the Support tab of the Options page"
@@ -1576,10 +1568,6 @@
   "contributors":{
     "message":"Van egy oldalunk, amely az [[AdBlock mögött álló emberek]]et is segít megismerni!",
     "description":"Link to the contributors page on the Support tab"
-  },
-  "debuginfo":{
-    "message":"Csapatunk netán némi hibakeresési információt kérelmezett? Ehhez kattintson [[ide]]!",
-    "description":"Users can click this link to provide debug information to AdBlock staff"
   },
   "bugreport":{
     "message":"Miért nem küld nekünk [[hibajelentést]]?",
