--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -479,6 +479,10 @@
     "message": "Turco",
     "description": "A filter list"
   },
+  "filteranticircumvent": {
+    "message": "Filtri anti-elusione",
+    "description": "A filter list"
+  },
   "blacklistclickmessage": {
     "message": "Clicca col pulsante destro sulla pubblicità in una pagina per bloccarla, oppure bloccala qui manualmente.",
     "description": "'Hide a section of a webpage' part on the Customize tab of the Options page."
@@ -947,6 +951,10 @@
     "message": "Giapponese",
     "description": "A filter list"
   },
+  "filternorwegian": {
+    "message": "Norvegese",
+    "description": "A filter lsit"
+  },
   "filtereasylist_plun_korean": {
     "message": "Coreano",
     "description": "A filter list"
@@ -1341,6 +1349,10 @@
   },
   "report_ad_on_page": {
     "message": "Segnala una pubblicità in questa pagina",
+    "description": "Entry in the AdBlock button menu"
+  },
+  "troubleshoot_an_ad": {
+    "message": "Risolvi il problema di un annuncio",
     "description": "Entry in the AdBlock button menu"
   },
   "acceptableadsoption": {
