--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -479,6 +479,10 @@
     "message": "トルコ語",
     "description": "A filter list"
   },
+  "filteranticircumvent": {
+    "message": "迂回防止フィルタ",
+    "description": "A filter list"
+  },
   "blacklistclickmessage": {
     "message": "ページを右クリックして広告をブロックしましょう -- それかここから手動でブロックしましょう。",
     "description": "'Hide a section of a webpage' part on the Customize tab of the Options page."
@@ -947,6 +951,10 @@
     "message": "日本語",
     "description": "A filter list"
   },
+  "filternorwegian": {
+    "message": "ノルウェー語",
+    "description": "A filter lsit"
+  },
   "filtereasylist_plun_korean": {
     "message": "韓国語",
     "description": "A filter list"
@@ -1341,6 +1349,10 @@
   },
   "report_ad_on_page": {
     "message": "このページの広告を報告する",
+    "description": "Entry in the AdBlock button menu"
+  },
+  "troubleshoot_an_ad": {
+    "message": "広告をトラブルシューティングする",
     "description": "Entry in the AdBlock button menu"
   },
   "acceptableadsoption": {
