--- a/_locales/nb/messages.json
+++ b/_locales/nb/messages.json
@@ -1,12 +1,4 @@
 {
-  "description":{
-    "message":"Den mest populære Chrome utvidelsen med over 40 millioner brukere! Blokkerer annonser over hele internett.",
-    "description":"Extension description in manifest. Should not exceed 132 characters."
-  },
-  "description2":{
-    "message":"Den mest populære Chrome utvidelsen med over 40 millioner brukere! Blokkerer annonser over hele internett.",
-    "description":"Extension description in manifest. Should not exceed 132 characters."
-  },
   "description_edge":{
     "message":"AdBlock. Reklameblokkerer #1 med over 200 millioner nedlastninger. Blokkerer reklamer over hele internettet.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -756,7 +748,7 @@
     "description":"Language name"
   },
   "lang_estonian":{
-    "message":"Estonesisk",
+    "message":"Estisk",
     "description":"Language name"
   },
   "lang_finnish":{
@@ -943,6 +935,10 @@
     "message":"Japansk",
     "description":"A filter list"
   },
+  "filternorwegian":{
+    "message":"Norsk",
+    "description":"A filter lsit"
+  },
   "filtereasylist_plun_korean":{
     "message":"Koreansk",
     "description":"A filter list"
@@ -972,7 +968,7 @@
     "description":"A filter list combined with EasyList"
   },
   "filtereasylist_plus_estonian":{
-    "message":"Estonesisk",
+    "message":"Estisk",
     "description":"A filter list"
   },
   "filtericelandic":{
@@ -1533,10 +1529,6 @@
       }
     }
   },
-  "here":{
-    "message":"her",
-    "description":"This message is injected in other strings as a link\/button"
-  },
   "adblocksupport":{
     "message":"AdBlock Støtte",
     "description":"Title of the Support tab of the Options page"
@@ -1576,10 +1568,6 @@
   "contributors":{
     "message":"Vi har også en side som hjelper deg å lære om [[folkene bak AdBlock]]!",
     "description":"Link to the contributors page on the Support tab"
-  },
-  "debuginfo":{
-    "message":"Har vårt team etterspurt feilsøkingsinfo? Klikk [[her]] for det!",
-    "description":"Users can click this link to provide debug information to AdBlock staff"
   },
   "bugreport":{
     "message":"Hvorfor ikke sende oss en [[bug-rapportering]]?",
