--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -479,6 +479,10 @@
     "message": "Turks",
     "description": "A filter list"
   },
+  "filteranticircumvent": {
+    "message": "Anti-ontwijkingsfilters",
+    "description": "A filter list"
+  },
   "blacklistclickmessage": {
     "message": "Klik met de rechterknop op een advertentie op een pagina om deze te blokkeren - of blokkeer die hier handmatig.",
     "description": "'Hide a section of a webpage' part on the Customize tab of the Options page."
@@ -947,6 +951,10 @@
     "message": "Japans",
     "description": "A filter list"
   },
+  "filternorwegian": {
+    "message": "Noors",
+    "description": "A filter lsit"
+  },
   "filtereasylist_plun_korean": {
     "message": "Koreaans",
     "description": "A filter list"
@@ -1140,7 +1148,7 @@
     "description": "A resource type"
   },
   "typeother": {
-    "message": "anders",
+    "message": "overige",
     "description": "A resource type"
   },
   "typepopup": {
@@ -1341,6 +1349,10 @@
   },
   "report_ad_on_page": {
     "message": "Rapporteer een advertentie op deze pagina",
+    "description": "Entry in the AdBlock button menu"
+  },
+  "troubleshoot_an_ad": {
+    "message": "Problemen met ad oplossen",
     "description": "Entry in the AdBlock button menu"
   },
   "acceptableadsoption": {
