--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -1,12 +1,4 @@
 {
-  "description":{
-    "message":"Najpopularniejsze rozszerzenie Chrome, korzysta z niego ponad 40 milionów użytkowników! Blokuje reklamy w całej sieci.",
-    "description":"Extension description in manifest. Should not exceed 132 characters."
-  },
-  "description2":{
-    "message":"Najpopularniejsze rozszerzenie Chrome, korzysta z niego ponad 40 milionów użytkowników! Blokuje reklamy w całej sieci.",
-    "description":"Extension description in manifest. Should not exceed 132 characters."
-  },
   "description_edge":{
     "message":"AdBlock. Numer 1 wśród programów do blokowania reklam z ponad 200 milionów pobrań. Blokuje reklamy w całym internecie.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -28,7 +20,7 @@
     "description":"Cancel button"
   },
   "buttonok":{
-    "message":"OK!",
+    "message":"Okej!",
     "description":"OK button"
   },
   "reportpubliclyavailable":{
@@ -48,7 +40,7 @@
     "description":"Title for the Options page"
   },
   "optionstitle_yt":{
-    "message":"Opcje AdBlocka dla YouTube™",
+    "message":"OPcje AdBlocka dla YouTube™",
     "description":"Title for the Options page for the 'AdBlock on YouTube' extension."
   },
   "chromebutton_how_to_hide2":{
@@ -943,6 +935,10 @@
     "message":"Japoński",
     "description":"A filter list"
   },
+  "filternorwegian":{
+    "message":"Norweski",
+    "description":"A filter lsit"
+  },
   "filtereasylist_plun_korean":{
     "message":"Koreański",
     "description":"A filter list"
@@ -1368,7 +1364,7 @@
     "description":"Label for textbox where user enters a list of sites on Customize tab"
   },
   "format_site1_site2_site3":{
-    "message":"Format: ~witryna1.com|~witryna2.com|~wiadomosci.witryna3.org",
+    "message":"Format: ~site1.com|~site2.com|~news.site3.org",
     "description":"Example showing users how to input a list of sites on the Customize tab. You can translate the 'news' and 'siteN' but leave the '|'s and '~'s in place."
   },
   "warning_overrules_filters":{
@@ -1533,10 +1529,6 @@
       }
     }
   },
-  "here":{
-    "message":"tutaj",
-    "description":"This message is injected in other strings as a link\/button"
-  },
   "adblocksupport":{
     "message":"Wsparcie dla AdBlock'a",
     "description":"Title of the Support tab of the Options page"
@@ -1576,10 +1568,6 @@
   "contributors":{
     "message":"Mamy [[stronę]], aby pomóc Ci dowiedzieć się o ludziach pracujących nad AdBlockiem!",
     "description":"Link to the contributors page on the Support tab"
-  },
-  "debuginfo":{
-    "message":"Czy nasz zespół poprosił o pewne informacje debugowania? Kliknij [[tutaj]], aby je uzyskać!",
-    "description":"Users can click this link to provide debug information to AdBlock staff"
   },
   "bugreport":{
     "message":"Może wyślesz nam [[raport błędu]]?",
@@ -1854,7 +1842,7 @@
     "description":"The text of the header the MyAdBlock Options page"
   },
   "myadblockpicreplacementswitchlabel":{
-    "message":"Zastąp zablokowane reklamy obrazami wysokiej jakości z poniższych kategorii",
+    "message":"Zastąp niektóre zablokowane reklamy obrazami wysokiej jakości z kategorii poniżej",
     "description":"The label text for the switch on the MyAdBlock Options page"
   },
   "catchannelswitchlabel":{
