--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -479,6 +479,10 @@
     "message": "Turco",
     "description": "A filter list"
   },
+  "filteranticircumvent": {
+    "message": "Filtros antifraude",
+    "description": "A filter list"
+  },
   "blacklistclickmessage": {
     "message": "Clique com o botão direito em um anúncio para bloqueá-lo, ou bloqueie ele aqui manualmente.",
     "description": "'Hide a section of a webpage' part on the Customize tab of the Options page."
@@ -947,6 +951,10 @@
     "message": "Japonês",
     "description": "A filter list"
   },
+  "filternorwegian": {
+    "message": "Norueguês",
+    "description": "A filter lsit"
+  },
   "filtereasylist_plun_korean": {
     "message": "Coreano",
     "description": "A filter list"
@@ -1004,7 +1012,7 @@
     "description": "A filter list"
   },
   "other": {
-    "message": "Outros",
+    "message": "Outro",
     "description": "Multiple choice option"
   },
   "nodefaultfilter1": {
@@ -1341,6 +1349,10 @@
   },
   "report_ad_on_page": {
     "message": "Relate um anúncio nessa página",
+    "description": "Entry in the AdBlock button menu"
+  },
+  "troubleshoot_an_ad": {
+    "message": "Resolver problema com um anúncio",
     "description": "Entry in the AdBlock button menu"
   },
   "acceptableadsoption": {
