--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -479,6 +479,10 @@
     "message": "Турецкий",
     "description": "A filter list"
   },
+  "filteranticircumvent": {
+    "message": "Противообходные фильтры",
+    "description": "A filter list"
+  },
   "blacklistclickmessage": {
     "message": "Щелкните по объявлению на странице правой кнопкой мыши, чтобы заблокировать его — или заблокируйте его здесь вручную.",
     "description": "'Hide a section of a webpage' part on the Customize tab of the Options page."
@@ -947,6 +951,10 @@
     "message": "Японский",
     "description": "A filter list"
   },
+  "filternorwegian": {
+    "message": "Норвежский",
+    "description": "A filter lsit"
+  },
   "filtereasylist_plun_korean": {
     "message": "Корейский",
     "description": "A filter list"
@@ -1140,7 +1148,7 @@
     "description": "A resource type"
   },
   "typeother": {
-    "message": "иное",
+    "message": "другие",
     "description": "A resource type"
   },
   "typepopup": {
@@ -1341,6 +1349,10 @@
   },
   "report_ad_on_page": {
     "message": "Пожаловаться на рекламу на странице",
+    "description": "Entry in the AdBlock button menu"
+  },
+  "troubleshoot_an_ad": {
+    "message": "Устранение неполадок с объявлением",
     "description": "Entry in the AdBlock button menu"
   },
   "acceptableadsoption": {
