--- a/_locales/sv/messages.json
+++ b/_locales/sv/messages.json
@@ -479,6 +479,10 @@
     "message": "Turkiska",
     "description": "A filter list"
   },
+  "filteranticircumvent": {
+    "message": "Blockering av kringgående filter",
+    "description": "A filter list"
+  },
   "blacklistclickmessage": {
     "message": "Högerklicka på en annons på en sida för att blockera den -- eller blockera den manuellt här.",
     "description": "'Hide a section of a webpage' part on the Customize tab of the Options page."
@@ -947,6 +951,10 @@
     "message": "Japanska",
     "description": "A filter list"
   },
+  "filternorwegian": {
+    "message": "Norska",
+    "description": "A filter lsit"
+  },
   "filtereasylist_plun_korean": {
     "message": "Koreanska",
     "description": "A filter list"
@@ -1341,6 +1349,10 @@
   },
   "report_ad_on_page": {
     "message": "Rapportera en annons på denna sida",
+    "description": "Entry in the AdBlock button menu"
+  },
+  "troubleshoot_an_ad": {
+    "message": "Felsökning av annons",
     "description": "Entry in the AdBlock button menu"
   },
   "acceptableadsoption": {
