--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -479,6 +479,10 @@
     "message": "土耳其文",
     "description": "A filter list"
   },
+  "filteranticircumvent": {
+    "message": "反規避過濾條件",
+    "description": "A filter list"
+  },
   "blacklistclickmessage": {
     "message": "在頁面上的廣告按右鍵以阻擋它，或從這裡手動阻擋。",
     "description": "'Hide a section of a webpage' part on the Customize tab of the Options page."
@@ -947,6 +951,10 @@
     "message": "日文",
     "description": "A filter list"
   },
+  "filternorwegian": {
+    "message": "挪威文",
+    "description": "A filter lsit"
+  },
   "filtereasylist_plun_korean": {
     "message": "韓文",
     "description": "A filter list"
@@ -1341,6 +1349,10 @@
   },
   "report_ad_on_page": {
     "message": "回報此頁上的廣告",
+    "description": "Entry in the AdBlock button menu"
+  },
+  "troubleshoot_an_ad": {
+    "message": "對廣告進行疑難排解",
     "description": "Entry in the AdBlock button menu"
   },
   "acceptableadsoption": {
