--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,7 +2,26 @@
 
 UNRELEASED:
 
-Version: 3.33.0, Date: 2018-09-14
+Version: 3.35.0, Date: 2018-12-03
+- Updated translations
+- Updated & improved the look of the AdBlock popup menu
+- Changed the AdBlock menu item - "Report an ad on this page" to "Troubleshoot an ad".  This menu item now opens a KB article.
+- Updated the AdBlock bug report page to use V2 of the FreshDesk API.
+- Updated the AdBlock logging API to V2
+- The missed local CDN statistics are now only sent when there is something to send
+- Fixed the vertical position of the social links in header on the AdBlock options page
+- Added the Norwegian language filter list
+- Updated the help links of the Swedish and Korean filter lists
+- Changed the URLs of the Finnish, Danish, Romanian and Icelandic language filter lists from HTTP to HTTPS
+
+
+Version: 3.34.0, Date: 2018-10-09
+- Updated translations
+- Added a keyboard shortcut for toggling the pause feature. (#323)
+- Added pause / unpause to the AdBlock context menu. (#326)
+- Show the /update page to let users know what features have been updated in the last 6 months. (#325)
+
+Version: 3.33.1, Date: 2018-09-17
 - Updated translations
 - Updated to ABP Core 3.3.1 (#320)
 
