--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -951,6 +951,10 @@
     "message":"Japanese",
     "description":"A filter list"
   },
+  "filternorwegian":{
+    "message": "Norwegian",
+    "description":"A filter lsit"
+  },
   "filtereasylist_plun_korean":{
     "message":"Korean",
     "description":"A filter list"
@@ -1345,6 +1349,10 @@
   },
   "report_ad_on_page":{
     "message":"Report an ad on this page",
+    "description":"Entry in the AdBlock button menu"
+  },
+  "troubleshoot_an_ad":{
+    "message":"Troubleshoot an ad",
     "description":"Entry in the AdBlock button menu"
   },
   "acceptableadsoption":{
