--- a/_locales/fil/messages.json
+++ b/_locales/fil/messages.json
@@ -1,12 +1,4 @@
 {
-  "description":{
-    "message":"Ang pinaka-popular na Chrome extension, na may mahigit 40 milyong mga gumagamit! Humahadlang sa mga ad sa buong web.",
-    "description":"Extension description in manifest. Should not exceed 132 characters."
-  },
-  "description2":{
-    "message":"Ang pinaka-popular na Chrome extension, na may mahigit 40 milyong mga gumagamit! Humahadlang sa mga ad sa buong web.",
-    "description":"Extension description in manifest. Should not exceed 132 characters."
-  },
   "description_edge":{
     "message":"AdBlock. Ang #1 ad blocker na may higit sa 200 milyong mga pag-download. Humahadlang sa mga ad sa buong web.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -879,6 +871,10 @@
     "message":"Japanese",
     "description":"A filter list"
   },
+  "filternorwegian":{
+    "message":"Norwegian",
+    "description":"A filter lsit"
+  },
   "filtereasylist_plun_korean":{
     "message":"Korean",
     "description":"A filter list"
@@ -990,10 +986,6 @@
   "whats_this":{
     "message":"Ano ito?",
     "description":"Text of a link pointing to the explanation of a new feature"
-  },
-  "here":{
-    "message":"dito",
-    "description":"This message is injected in other strings as a link\/button"
   },
   "resourceblocktitle":{
     "message":"Lahat ng mga pagkukunan",
