--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -479,6 +479,10 @@
     "message": "Turc",
     "description": "A filter list"
   },
+  "filteranticircumvent": {
+    "message": "Filtres anti-contournement",
+    "description": "A filter list"
+  },
   "blacklistclickmessage": {
     "message": "Faites un clic droit sur une publicité dans une page pour la bloquer -- ou bloquez-la ici manuellement.",
     "description": "'Hide a section of a webpage' part on the Customize tab of the Options page."
@@ -947,6 +951,10 @@
     "message": "Japonais",
     "description": "A filter list"
   },
+  "filternorwegian": {
+    "message": "Norvégien",
+    "description": "A filter lsit"
+  },
   "filtereasylist_plun_korean": {
     "message": "Coréen",
     "description": "A filter list"
@@ -1341,6 +1349,10 @@
   },
   "report_ad_on_page": {
     "message": "Signaler une publicité sur cette page",
+    "description": "Entry in the AdBlock button menu"
+  },
+  "troubleshoot_an_ad": {
+    "message": "Diagnostiquer une publicité",
     "description": "Entry in the AdBlock button menu"
   },
   "acceptableadsoption": {
