--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -479,6 +479,10 @@
     "message": "土耳其语",
     "description": "A filter list"
   },
+  "filteranticircumvent": {
+    "message": "反规避过滤器",
+    "description": "A filter list"
+  },
   "blacklistclickmessage": {
     "message": "右击页面上的广告以拦截，或在此处手动拦截。",
     "description": "'Hide a section of a webpage' part on the Customize tab of the Options page."
@@ -947,6 +951,10 @@
     "message": "日语",
     "description": "A filter list"
   },
+  "filternorwegian": {
+    "message": "挪威语",
+    "description": "A filter lsit"
+  },
   "filtereasylist_plun_korean": {
     "message": "韩语（朝鲜语）",
     "description": "A filter list"
@@ -1341,6 +1349,10 @@
   },
   "report_ad_on_page": {
     "message": "报告此页面上的广告",
+    "description": "Entry in the AdBlock button menu"
+  },
+  "troubleshoot_an_ad": {
+    "message": "广告疑难解答",
     "description": "Entry in the AdBlock button menu"
   },
   "acceptableadsoption": {
